changing the configuration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "end-to-round-react-app",
+  "name": "square-to-round-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
