--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
     "semi": 0,
     "comma-dangle": 0,
     "prettier/prettier": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".tsx"] }
+    ]
   }
 }
