--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.28.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
+    "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1"
   },
@@ -65,8 +66,8 @@
       "npm run lint",
       "prettier --write"
     ],
-    
-  "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
-
+    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write",
+    "*.css": "stylelint",
+    "*.{png,jpeg,jpg,gif,svg}": "imagemin-lint-staged"
   }
 }
