--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "husky": "^7.0.0",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.5.3"
   },
   "lint-staged": {
     "**/*.{js,jsx}": [
