--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "husky": "^7.0.0",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1",
-    "stylelint": "^14.5.3"
+    "prettier": "^2.5.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,md,html}": [
