--- a/package.json
+++ b/package.json
@@ -50,8 +50,13 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
@@ -59,7 +64,9 @@
     "husky": "^7.0.0",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1"
+    "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,md,html}": [
