--- a/.github/workflows/verified-commit.yml
+++ b/.github/workflows/verified-commit.yml
@@ -1,2 +1,29 @@
-- name: Verified commit
-  uses: swinton/commit@v2.0.0
+name: Verified commit
+description: GitHub Action to create verified commits
+inputs:
+  files:
+    description: |
+      Newline-separated list of files to be committed, relative to root of repository.
+    required: true
+  workspace:
+    description: |
+      Base directory containing files to be committed, defaults to the GitHub workspace directory path, $GITHUB_WORKSPACE.
+    required: false
+    default: ''
+  commit-message:
+    description: |
+      Commit message to be used
+    required: true
+  ref:
+    description: |
+      Reference to be updated with commit. This reference must already exist. Defaults to the repository's default branch ref.
+    required: false
+    default: ''
+outputs:
+  commit-sha:
+    description: SHA of created commit
+runs:
+  using: node12
+  main: dist/index.js
+branding:
+  icon: git-commit
